fix overflow on figure

--- a/assets/css/images.scss
+++ b/assets/css/images.scss
@@ -1,5 +1,6 @@
 main#content {
   .figure-container {
+    overflow: hidden;
     margin: $body-font-size 0 $body-font-size * 2 0;
     border-radius: $default-radius;
 
